fix: buton content alignment

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,10 @@ button {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
     border: none;
     background-color: white;
+    padding: auto;
     border-radius: 10px;
     font-size: 1.75rem;
     font-weight: 600;
-    justify-content: center;
 }
 
 h1 {
